// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`moderation-events get event gets an event by specific id 1`] = `
Object {
  "createdAt": "1970-01-01T00:00:00.000Z",
  "createdBy": "user(2)",
  "event": Object {
    "$type": "tools.ozone.moderation.defs#modEventReport",
    "comment": "X",
    "isReporterMuted": false,
    "reportType": "com.atproto.moderation.defs#reasonMisleading",
  },
  "id": 1,
  "subject": Object {
    "$type": "com.atproto.admin.defs#repoView",
    "did": "user(0)",
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "moderation": Object {
      "subjectStatus": Object {
        "createdAt": "1970-01-01T00:00:00.000Z",
        "hosting": Object {
          "$type": "tools.ozone.moderation.defs#accountHosting",
          "status": "unknown",
        },
        "id": 1,
        "lastReportedAt": "1970-01-01T00:00:00.000Z",
        "lastReviewedAt": "1970-01-01T00:00:00.000Z",
        "lastReviewedBy": "user(1)",
        "reviewState": "tools.ozone.moderation.defs#reviewEscalated",
        "subject": Object {
          "$type": "com.atproto.admin.defs#repoRef",
          "did": "user(0)",
        },
        "subjectBlobCids": Array [],
        "subjectRepoHandle": "alice.test",
        "tags": Array [
          "lang:und",
        ],
        "takendown": false,
        "updatedAt": "1970-01-01T00:00:00.000Z",
      },
    },
    "relatedRecords": Array [
      Object {
        "$type": "app.bsky.actor.profile",
        "avatar": Object {
          "$type": "blob",
          "mimeType": "image/jpeg",
          "ref": Object {
            "$link": "cids(0)",
          },
          "size": 3976,
        },
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "displayName": "ali",
        "labels": Object {
          "$type": "com.atproto.label.defs#selfLabels",
          "values": Array [
            Object {
              "val": "self-label-a",
            },
            Object {
              "val": "self-label-b",
            },
          ],
        },
      },
    ],
  },
  "subjectBlobCids": Array [],
  "subjectBlobs": Array [],
}
`;

exports[`moderation-events query events returns all events for record or repo 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(1)",
    "creatorHandle": "alice.test",
    "event": Object {
      "$type": "tools.ozone.moderation.defs#modEventReport",
      "comment": "X",
      "isReporterMuted": false,
      "reportType": "com.atproto.moderation.defs#reasonSpam",
    },
    "id": 11,
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "bob.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(2)",
    "creatorHandle": "mod-authority.test",
    "event": Object {
      "$type": "tools.ozone.moderation.defs#modEventTag",
      "add": Array [
        "lang:en",
        "lang:i",
      ],
      "remove": Array [],
    },
    "id": 6,
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "bob.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(1)",
    "creatorHandle": "alice.test",
    "event": Object {
      "$type": "tools.ozone.moderation.defs#modEventReport",
      "comment": "X",
      "isReporterMuted": false,
      "reportType": "com.atproto.moderation.defs#reasonSpam",
    },
    "id": 5,
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "bob.test",
  },
]
`;

exports[`moderation-events query events returns all events for record or repo 2`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "creatorHandle": "bob.test",
    "event": Object {
      "$type": "tools.ozone.moderation.defs#modEventReport",
      "comment": "X",
      "isReporterMuted": false,
      "reportType": "com.atproto.moderation.defs#reasonSpam",
    },
    "id": 10,
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "alice.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(1)",
    "creatorHandle": "mod-authority.test",
    "event": Object {
      "$type": "tools.ozone.moderation.defs#modEventTag",
      "add": Array [
        "lang:en",
      ],
      "remove": Array [],
    },
    "id": 4,
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "alice.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "creatorHandle": "bob.test",
    "event": Object {
      "$type": "tools.ozone.moderation.defs#modEventReport",
      "comment": "X",
      "isReporterMuted": false,
      "reportType": "com.atproto.moderation.defs#reasonSpam",
    },
    "id": 3,
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "alice.test",
  },
]
`;
